# cncpp

./: .gitignore  CMakeLists.txt  README.md  cncpp.code-workspace  machine.ini  machine.yml  program.gcode  test.gcode
R/: .gitignore  R.Rproj  README.md  cncpp_test.cpp  cncpp_test.qmd  interface.cpp  interface_testing.qmd  plotting.qmd  test.g  test.qmd
examples/: CMakeLists.txt
examples/basics/: Car.cpp  Car.hpp  README.md  basics.cpp  myobject.cpp  myobject.hpp
examples/fmt/: README.md  fmt.cpp
examples/inheritance/: README.md  inheritance.cpp
examples/json/: README.md  example.json  json.cpp
examples/lambda/: README.md  lambda.cpp
examples/lesson1/: test.cpp
examples/lesson2/: test.cpp
examples/lesson3/: test.cpp
examples/lesson4/: test.cpp
examples/lesson5/: test.cpp
examples/lesson6/: config.yaml  example.json  test.cpp
examples/lesson7/: test.cpp
examples/lesson7_mosquitto/: mosquitto_test.cpp
examples/linux_file_system/: README.md
examples/mqtt_sub/: mqtt_sub.cpp
examples/rang/: README.md  rang.cpp
examples/stl_list/: README.md  stl_list.cpp
examples/stl_map/: README.md  stl_map.cpp
examples/stl_vector/: README.md  stl_vector.cpp
examples/timing/: README.md  timing.cpp
examples/yaml/: README.md  list_config.yaml  modified_config.yaml  nested_config.yaml  output.yaml  yaml.cpp  yaml2json.hpp
goodies/: README.md
src/: block.cpp  block.hpp  cncpp.hpp  cncpp.hpp.in  dcdpp.hpp  defines.hpp.in  fsm.cpp  fsm.hpp  machine.cpp  machine.hpp  point.cpp  point.hpp  program.cpp  program.hpp  timer.cpp
src/main/: cncpp.cpp  simulate.cpp
